--- a/about.html
+++ b/about.html
@@ -1,13 +1,27 @@
+# More About Me
 
+This page says a bit more about me.
 
 ## Hobbies
 
 When I am not studying, I like to play soccer, read science fiction, and play the piano.
 
-These are my favorite soccer teams:
+These are my **favorite** soccer teams:
 
 - Seattle Sounders SC
 - Liverpool FC
 - FC Barcelona
 
 I also love making things with [Arduino](https://www.arduino.cc/).
+
+## Music
+
+I am not that good at making music, but I like to listen to music. This table lists some of my favorite albums:
+
+|   Album        |   Band               |
+|---------------:|----------------------|
+| OK Computer    | Radiohead            |
+|  either/or     | Elliott Smith        |
+| Late Developers| Belle and Sebastian  |
+
+
