--- a/about.html
+++ b/about.html
@@ -1,27 +1,45 @@
-# More About Me
+<!doctype html>
+<html lang="en">
+  <head>
+    <title>More About Me</title>
+  </head>
+  <body>
+    <p>This page says a bit more about me.</p>
+    
+  <h2>Hobbies</h2>
+    <p>When I am not studying, I like to play soccer, read science fiction, and play the piano.</p>
 
-This page says a bit more about me.
+  <p>These are my **favorite** soccer teams:
+   <ul>
+    <li>Seattle Sounders SC</li>
+    <li>Liverpool FC</li>
+    <li>FC Barcelona</li>
+   </ul>
+  </p> 
+  <p>I also love making things with [Arduino](https://www.arduino.cc/).</p>
 
-## Hobbies
-
-When I am not studying, I like to play soccer, read science fiction, and play the piano.
-
-These are my **favorite** soccer teams:
-
-- Seattle Sounders SC
-- Liverpool FC
-- FC Barcelona
-
-I also love making things with [Arduino](https://www.arduino.cc/).
-
-## Music
-
-I am not that good at making music, but I like to listen to music. This table lists some of my favorite albums:
-
-|   Album        |   Band               |
-|---------------:|----------------------|
-| OK Computer    | Radiohead            |
-|  either/or     | Elliott Smith        |
-| Late Developers| Belle and Sebastian  |
-
+<h2>Music</h2>
+  <p>I am not that good at making music, but I like to listen to music. This table lists some of my favorite albums:
+    <table>
+      <tr>
+        <th>Album</th>
+        <th>Band</th>
+      </tr>
+      <tr>
+        <td>OK Computer</td>
+        <td>Radiohead</td>
+      </tr>
+      <tr>
+        <td>either/or  </td>
+        <td>Elliott Smith</td>
+      </tr>
+      <tr>
+        <td>Late Developers</td>
+        <td>Belle and Sebastian</td>
+      </tr>
+    </table>
+    
+  </body>
+</html>
+  
 
