--- a/about.html
+++ b/about.html
@@ -9,17 +9,19 @@
   <h2>Hobbies</h2>
     <p>When I am not studying, I like to play soccer, read science fiction, and play the piano.</p>
 
-  <p>These are my **favorite** soccer teams:
+  <p>These are my <strong>favorite</strong> soccer teams:
    <ul>
     <li>Seattle Sounders SC</li>
     <li>Liverpool FC</li>
     <li>FC Barcelona</li>
    </ul>
   </p> 
-  <p>I also love making things with [Arduino](https://www.arduino.cc/).</p>
+  <p>I also love making things with <a href="https://www.arduino.cc">Arduino</a>.</p>
+
+    <img src="arduino.jpg">
 
 <h2>Music</h2>
-  <p>I am not that good at making music, but I like to listen to music. This table lists some of my favorite albums:
+  <p>I am not that good at making music, but I like to <i>listen</i> to music. This table lists some of my favorite albums:
     <table>
       <tr>
         <th>Album</th>
