--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <title>More About Me</title>
   </head>
   <body>
+    <h1>More ABout Me</h1>
     <p>This page says a bit more about me.</p>
     
   <h2>Hobbies</h2>
