--- a/about.html
+++ b/about.html
@@ -40,6 +40,10 @@
         <td>Late Developers</td>
         <td>Belle and Sebastian</td>
       </tr>
+      <tr>
+        <td>The Sophtware Slump</td>
+        <td>Grandaddy</td>
+      </tr>
     </table>
     
   </body>
