--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     <li>FC Barcelona</li>
    </ul>
   </p> 
-  <p>I also love making things with <a href="https://www.arduino.cc">Arduino</a>.</p>
+  <p>I also love making things with <a href="https://www.arduino.cc" alt="Picture of Arduino hardware.">Arduino</a>.</p>
 
     <img src="arduino.jpg">
 
