--- a/about.html
+++ b/about.html
@@ -4,17 +4,19 @@
     <title>More About Me</title>
   </head>
   <body>
-    <h1>More ABout Me</h1>
+    <h1>More About Me</h1>
     <p>This page says a bit more about me.</p>
     
   <h2>Hobbies</h2>
-    <p>When I am not studying, I like to play soccer, read science fiction, and play the piano.</p>
+    <p>When I am not studying, I like to play soccer, read science fiction, and play the ukulele.</p>
 
   <p>These are my <strong>favorite</strong> soccer teams:
    <ul>
     <li>Seattle Sounders SC</li>
-    <li>Liverpool FC</li>
-    <li>FC Barcelona</li>
+    <li>Seattle Reign</li>
+    <li>UW Huskies</li>
+    <li>Gustavus Gusties</li>
+    <li>LVR Dragon Slayers</li>
    </ul>
   </p> 
   <p>I also love making things with <a href="https://www.arduino.cc" alt="Picture of Arduino hardware.">Arduino</a>.</p>
