--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <p>This page says a bit more about me.</p>
     
   <h2>Hobbies</h2>
-    <p>When I am not studying, I like to play soccer, read science fiction, and play the ukulele.</p>
+    <p>When I am not studying, I like to play soccer, read historical fiction, and play the ukulele.</p>
 
   <p>These are my <strong>favorite</strong> soccer teams:
    <ul>
